# sms-hog

./: CHANGELOG.md  LICENSE  README.md  docker-compose.yaml
example/php-api-client/: .gitignore  Dockerfile  client.php  composer.json
example/php-api-client/src/: ApiClient.php  CreateSmsRequest.php  Response.php
sms-hog-back/: Dockerfile  main.py  pyproject.toml
sms-hog-front/: Dockerfile  nginx.conf  package-lock.json  package.json
sms-hog-front/public/: index.html
sms-hog-front/src/: App.js  settings.js
sms-hog-front/src/components/: SmsTable.jsx
