[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = ["Ronia Rebane <roni.rebane@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
gunicorn = "^22.0.0"
motor = "^3.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
